global/_page.scss
.template--documentsection {
 
    .contents__listitem::before {
        content: "-";
        font-family: inherit;
    }



    .contents__list{

        columns: 1;
        @include mq('sm') {
            columns: 2;
        }
       // li.contents__listitem { }


    }



    .document-pagination {
        
        .document-pagination__link{width: 50%;}
        .document-pagination__link--next { float: right;}
        .document-pagination__link--prev {float: left;}


    }



}


//Share this page icons
.a-share__link:nth-child(2) .a-share__image {
    content: url("/image/677/Facebook-icon/original.png");
    background-size: contain;
    width: 32px;
    height: 32px;
}
.a-share__link:nth-child(3) .a-share__image {
    content: url("/image/679/Twitter-icon/original.png");
    background-size: contain;
    width: 32px;
    height: 32px;
}
.a-share__link:nth-child(4) .a-share__image {
    content: url("/image/676/Email-icon/original.png");
    background-size: contain;
    width: 32px;
    height: 32px;
}
.a-share__link:nth-child(6) .a-share__image {
    content: url("/image/678/Print-icon/original.png");
    background-size: contain;
    width: 32px;
    height: 32px;
}

// ANCHOR PAGE SPECIFIC

.body--sticky-jumplinks .container {
    width: 1170px;
        max-width: 100%;
}

.body--sticky-jumplinks .a-body__inner{
    display: flex;
    flex-wrap: wrap;
}

#anchor-contents {
    width: 70%; 
}


.gi-jumplist {
    display: block;
    width: 100% !important;
   
    top: 0;
    height: 100%;
    float: left; 
}

.body--sticky-jumplinks .gi-jumplist {
   width: 30% !important;
    position: sticky; 
}

.body--no-aside .container.container--fullwidth .maincontent .a-heading, .body--no-aside .container.container--fullwidth .maincontent .a-intro, .body--no-aside .container.container--fullwidth .maincontent .a-body:has(.gi-jumplist){
    max-width: 1170px; // TEMP 
}

.a-body ul li.gi-jumplist__listitem {
    list-style-type: none; 
}
.gi-jumplist__listitem::before {
    content: "-";
    font-family: inherit;
    position: relative;
    bottom: 2px;
}

 
@media (max-width: 1050px)
{
    .body--sticky-jumplinks .gi-jumplist, .body--sticky-jumplinks #anchor-contents, #anchor-contents {
        width: 100% !important;
    }

    .body--sticky-jumplinks .gi-jumplist, .gi-jumplist {
        position: relative;
    } 
    .container.container--fullwidth {
        max-width: 100% !important;
    }


} 

.a-share {
    display: none;
}

